--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "react-table": "^7.0.4"
+    "react-table": "^7.0.4",
+    "styled-components": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
